# galvinise

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  config.h.in  configure  todo.txt
.github/workflows/: cmake.yml  codeql.yml
data/: galvinise.pc.gvz
modules/css/: colours.lua
src/: CMakeLists.txt  Makefile  blam.c  blam.h  blam_buf.c  blam_check.c  blam_check.h  blam_direct.c  blam_onion.c  blam_writev.c  blob.c  blob.h  check.c  debug.h  diskslurp.c  diskslurp.h  galv.c  galv.h  galv_check.c  galv_check.h  galvinise.h  main.c
src/modules/css/: colours.c  colours.h  colours.md
tests/: notes.txt  runtests.sh  test001.gvz  test002.expect  test002.gvz  test003.expect  test003.gvz  test004.expect  test004.gvz  test005.expect  test005.gvz  test006.expect  test006.gvz  test007.expect  test007.gvz  test008.expect  test008.gvz  test009.expect  test009.gvz  test010.expect  test010.gvz  test011.expect  test011.gvz  test012.gvz  test013.expect  test013.gvz  test014.expect  test014.gvz  test014.include  test015.gvz  test016.expect  test016.gvz  test017.expect  test017.gvz  test018.expect  test018.gvz  test019.gvz  test020.expect  test020.gvz  test021.expect  (+13 more)
